# Yovsa_test_winstarsAI

./: README.md
task_1_ImgСls/: .gitignore  README.md  pyproject.toml  requirements.txt
task_1_ImgСls/models/: cnn_cls.pth  fnn_cls.pth
task_1_ImgСls/notebooks/: gridsearch_rf.ipynb  models_tuning.ipynb  training.ipynb
task_1_ImgСls/src/: EarlyStopping.py  data_loader.py  paths.py
task_1_ImgСls/src/classifiers/: interface.py  mnist_classifier.py  nn_architectures.py  nn_base.py  nn_classifiers.py  random_forest_classifier.py
task_2_NER_ImgCls/: .gitignore  README.md  pyproject.toml  requirements.txt
task_2_NER_ImgCls/data/data_ner/: train_data_ner.json
task_2_NER_ImgCls/models/ner_model/: meta.json
task_2_NER_ImgCls/models/ner_model/ner/: model
task_2_NER_ImgCls/models/ner_model/vocab/: strings.json
task_2_NER_ImgCls/notebooks/: EDA.ipynb  demo.ipynb
task_2_NER_ImgCls/src/: infer_img.py  infer_ner.py  paths.py  pipeline.py  train_img.py  train_ner.py
task_2_NER_ImgCls/src/img_classification/: early_stopping.py  img_data_preprocessing.py  infer_img.py  inference_img.py  model_img.py  train_img.py
task_2_NER_ImgCls/src/ner/: infer_ner.py  train_ner.py
task_2_NER_ImgCls/utils/: class_names.json  data_loading.py  paths.py
